# Telegram-group-manager

./: .env  .env.example  .gitignore  000_debug.md  001debug.md  002_debug.md  003_debug.md  004_debug.md  00_ARQUITECTURA_OBJETIVO_COMPLETADA.md  00_implementacion_modelo_lenguaje.md  00_modelo_lenguaje.md  01_ARQUITECTURA_OBJETIVO.md  01_ESTADO_PROYECTO.md  01_HABILITAR_LLM.md  01_IMPLEMENTACION_SEMANA_4_5_MIGRACION_POSTGRES.md  01_IMPLEMENTACION_SEMANA_6_8_POLICY_PLANNER.md  01_IMPLEMENTACION_SEMANA_9_12_MULTITENANT.md  01_PLAN_IMPLEMENTACION_MANAGER_BOT_COMPLETADA.md  01_PLAN_IMPLEMENTACION_MIGRACION_ARQUITECTURA_AGENTEIA.md  01_PLAN_IMPLEMENTACION_MIGRACION_ARQUITECTURA_AGENTEIA_COMPLETADO.md  01_PLAN_IMPLEMENTACION_PROPUESTA_AGENTEIA.md  01_PLAN_IMPLEMENTACION_PROPUESTA_AGENTEIA_COMPLETADO.md  01_implementacion_menu_reportes.md  01_implementacion_menu_reportes_completada.md  01_propuesta_robot_agenteia.md  01_propuesta_robot_agenteia_completada.md  02_ANALISIS_BOT_NL.md  02_HABILITAR_LLM.md  02_IMPLEMENTACION_BOT_AGENTEIA.md  02_MIGRACION_ARQUITECTURA.md  02_MIGRACION_ARQUITECTURA_PLAN_DETALLADO_COMPLETADO.md  02_PLAN_IMPLEMENTACION_NLPL.md  02_implementacion_multimedia.md  02_multimedia.md  02propuesta_multimedia.md  03_ANALISIS_BOT.md  03_HABILITAR_LLM.md  03_OBJETIVO_DIA.md  04_OBJETIVO_DIA.md  04_OBJETIVO_DIA_COMPLETADO.md  (+152 more)
.github/: pull_request_template.md
NLP/: nlp.md
app/: README.md  __init__.py  celery_app.py
assets/: Sin título-2026-03-25-1015.excalidraw
chat_service/: __init__.py  agent.py  brain.py  pattern_engine.py  storage.py
config/: redis.conf
data/: intent_training_data.json
debug/: 00_debug.md  01_debug.md  02_debug.md  04_debug.md  05_debug.md  06_debug.md  07_debug.md  08_debug.md  09_debug.md  10_debuh.md  11_debug.md  12_debug.md  debug.md
deploy/: secret-telegram-bot.yaml  telegram-webhook-deploy.yaml  webhook-deployment.yaml  worker-deployment.yaml
design/: 01_arquitecture.md  advantages.md  architecture.md  conclusion.md  contratos.md  cost_and_scalability.md  diagram.md  flujo_datos.md  risks.md  roadmap.md  stack.md
docs/: nightmode_casos_uso.md  reportes_destinatos_casos_uso.md
robot_ptb_compat/: README.md  __init__.py  examples.py  pyproject.toml  version.py
robot_ptb_compat/bridge/: __init__.py  callback_bridge.py  chat_bridge.py  context_bridge.py  message_bridge.py  update_bridge.py  user_bridge.py
robot_ptb_compat/compat/: __init__.py  application_bridge.py
robot_ptb_compat/compat/handlers/: __init__.py  base_adapter.py  callback_adapter.py  command_adapter.py  filters_adapter.py  message_adapter.py
robot_ptb_compat/constants/: __init__.py  app_limits.py  ptb_limits.py
robot_ptb_compat/errors/: __init__.py  app_errors.py  telegram_errors.py
robot_ptb_compat/helpers/: __init__.py  app_helpers.py  ptb_helpers.py
robot_ptb_compat/robot_ptb_compat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
robot_ptb_compat/runtime/: __init__.py  application_builder.py  polling_runner.py  webhook_runner.py
robot_ptb_compat/tests/: __init__.py  test_bridges.py  test_constants.py  test_handlers.py  test_runtime.py
robot_ptb_compat/transport/: __init__.py  telegram_client.py
(+457 files in other folders)
