[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-app"
version = "1.0.0"
description = "Manufacturing robot application with Telegram integration"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robot Team", email = "team@robot.local"}
]
dependencies = [
    "fastapi>=0.133.0",
    "uvicorn[standard]>=0.41.0",
    "python-telegram-bot>=22.6",
    "redis>=7.2.1",
    "rq>=1.16.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.24.0",
    "pyyaml>=6.0.0",
    "click>=8.3.0",
    "jinja2>=3.1.0",
    "aiofiles>=25.1.0",
    "email-validator>=2.3.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
robot = "app.webhook.entrypoint:main"
robot-worker = "worker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "chat_service*", "migrations*", "scripts*", "webhook_tasks*", "worker*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
