[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-ptb-compat"
version = "0.1.0"
description = "Librería de compatibilidad para integrar módulos robot con python-telegram-bot"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robot Team", email = "team@robot.local"}
]
keywords = ["telegram", "bot", "python-telegram-bot", "ptb", "compat", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/robot/robot-ptb-compat"
Repository = "https://github.com/robot/robot-ptb-compat"
Issues = "https://github.com/robot/robot-ptb-compat/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_ptb_compat*"]

[tool.setuptools.package-data]
robot_ptb_compat = ["README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
